// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Progress /> should match snapshot 1`] = `
.c2 {
  border: none;
  width: 100%;
  height: 8px;
}

.c2.c2,
.c2::-webkit-progress-value,
.c2[value]::-webkit-progress-bar,
.c2:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-moz-progress-bar,
.c2[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c2::-webkit-progress-value {
  background-color: #F46152;
}

.c2.c2,
.c2:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c2[value]::-moz-progress-bar {
  background-color: #F46152;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 .c3 {
  margin-right: 8px;
}

.c0 .c1 {
  margin: auto;
}

<div>
  <div
    class="c0"
  >
    <progress
      class="c1 c2"
      max="1"
    />
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1 c2"
      max="100"
    />
  </div>
  <div
    class="c0"
  >
    <progress
      class="c1 c2"
      max="100"
      value="60"
    />
  </div>
</div>
`;

exports[`<Progress /> should match snapshot with label number 1`] = `
.c2 {
  border: none;
  width: 100%;
  height: 8px;
}

.c2.c2,
.c2::-webkit-progress-value,
.c2[value]::-webkit-progress-bar,
.c2:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-moz-progress-bar,
.c2[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c2::-webkit-progress-value {
  background-color: #F46152;
}

.c2.c2,
.c2:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c2[value]::-moz-progress-bar {
  background-color: #F46152;
}

.c4 {
  font-size: 12px;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 .c3 {
  margin-right: 8px;
}

.c0 .c1 {
  margin: auto;
}

.c5 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 .c3 {
  margin-left: 8px;
}

.c5 .c1 {
  margin: auto;
}

<div>
  <div
    class="c0"
  >
    <progress
      class="c1 c2"
      max="100"
      value="20"
    />
    <label
      class="c3 c4"
    >
      20
    </label>
  </div>
  <div
    class="c5"
  >
    <progress
      class="c1 c2"
      max="100"
      value="65"
    />
    <label
      class="c3 c4"
    >
      65
    </label>
  </div>
</div>
`;

exports[`<Progress /> should match snapshot with label string 1`] = `
.c2 {
  border: none;
  width: 100%;
  height: 8px;
}

.c2.c2,
.c2::-webkit-progress-value,
.c2[value]::-webkit-progress-bar,
.c2:not(value)::-webkit-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-moz-progress-bar,
.c2[value]::-moz-progress-bar {
  border-radius: 8px;
}

.c2:not(value)::-webkit-progress-bar {
  background-color: #F5F5FA;
}

.c2::-webkit-progress-value {
  background-color: #F46152;
}

.c2.c2,
.c2:not(value)::-moz-progress-bar {
  background-color: #F5F5FA;
}

.c2[value]::-moz-progress-bar {
  background-color: #F46152;
}

.c4 {
  font-size: 12px;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 .c3 {
  margin-right: 8px;
}

.c0 .c1 {
  margin: auto;
}

.c5 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 .c3 {
  margin-left: 8px;
}

.c5 .c1 {
  margin: auto;
}

<div>
  <div
    class="c0"
  >
    <progress
      class="c1 c2"
      max="100"
    />
    <label
      class="c3 c4"
    >
      Some decription here
    </label>
  </div>
  <div
    class="c5"
  >
    <progress
      class="c1 c2"
      max="100"
      value="65"
    />
    <label
      class="c3 c4"
    >
      Some decription here
    </label>
  </div>
</div>
`;
